# workoflow-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
src/workoflow_mcp/: __init__.py  cache.py  client.py  server.py  tools.py
